# pyPhenogram

./: .gitignore  README.md  main.py  pyproject.toml  run.py
src/pyPhenogram/: __init__.py  chromosome_data.py  cytoband_data.py  parser.py  plotter.py
