[project]
name = "pyphenogram"
version = "0.1.0"
description = "Chromosome idiogram plotter for GWAS hits"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.0",
    "requests>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyPhenogram"]
